// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "flex": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "borderTopColor": "#C7CDD1",
          "borderTopWidth": 0.5,
          "paddingBottom": 16,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityLabel={undefined}
          accessible={false}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 4,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#8B969E",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "paddingTop": 2,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-medium",
                },
              ]
            }
            testID="undefined-title-lbl"
          >
            foo
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`render first row 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "flex": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        undefined,
      ]
    }
  >
    <View
      style={Object {}}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityLabel={undefined}
          accessible={false}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 4,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`render no title 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "flex": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "borderTopColor": "#C7CDD1",
          "borderTopWidth": 0.5,
          "paddingBottom": 16,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityLabel={undefined}
          accessible={false}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 4,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
